# Boson.Native

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
apps/common/: application_lock.h  coredump.h
apps/crawler/: CMakeLists.txt  crawler.cc  crawler.h  main.cc  setting.cc  setting.h
apps/launcher/: CMakeLists.txt  Makefile  default.conf  launcher.cc  sample.conf
apps/shell/: CMakeLists.txt  announce_peer_command.h  bootstrap_command.h  command.h  exit_command.h  find_node_command.h  find_peer_command.h  find_value_command.h  help_command.h  id_command.h  routingtable_command.h  shell.cc  shell.conf  shell.h  stat_command.h  storage_command.h  storage_listpeer_command.h  storage_listvalue_command.h  storage_peer_command.h  storage_value_command.h  store_value_command.h
debian/control/: control  postinst  postrm  preinst  prerm
debian/scripts/: carrier-meerkat  carrier-meerkat.service
docs/: usage-guide-for-active-proxy-service.md
include/: boson.h  carrier.h
include/boson/: addon.h  blob.h  configuration.h  connection_status.h  crypto_box.h  def.h  default_configuration.h  id.h  lookup_option.h  network.h  node.h  node_info.h  node_status.h  peer_info.h  prefix.h  result.h  signature.h  socket_address.h  types.h  value.h  version.h
include/carrier/: addon.h  blob.h  configuration.h  connection_status.h  crypto_box.h  default_configuration.h  id.h  lookup_option.h  network.h  node.h  node_info.h  node_status.h  node_status_listener.h  peer_info.h  prefix.h  result.h  signature.h  socket_address.h  types.h  value.h  version.h
src/: CMakeLists.txt
src/addons/: addons.cc
src/addons/activeproxy/: activeproxy.cc  activeproxy.h  connection.cc  connection.h  exceptions.h  packettype.h
src/core/: constants.cc  constants.h  crypto_cache.h  crypto_context.cc  crypto_context.h  data_storage.h  default_configuration.cc  dht.cc  dht.h  error_code.h  id.cc  kbucket.cc  kbucket.h  kbucket_entry.cc  kbucket_entry.h  kclosest_nodes.cc  kclosest_nodes.h  node.cc  node_info.cc  peer_info.cc  prefix.cc  routing_table.cc  routing_table.h  rpccall.cc  rpccall.h  rpcserver.cc  rpcserver.h  rpcstatistics.cc  rpcstatistics.h  scheduler.h  serializers.cc  serializers.h  sqlite_storage.cc  sqlite_storage.h  token_manager.cc  token_manager.h  value.cc  version.cc
src/core/crypto/: crypto_box.cc  hex.cc  hex.h  random.cc  random.h  shasum.cc  shasum.h  signature.cc
src/core/exceptions/: crypto_error.h  dht_error.h  exceptions.h  state_error.h
src/core/messages/: announce_peer_request.cc  announce_peer_request.h  announce_peer_response.h  error_message.cc  error_message.h  find_node_request.h  find_node_response.h  find_peer_request.h  find_peer_response.cc  find_peer_response.h  find_value_request.cc  find_value_request.h  find_value_response.cc  find_value_response.h  lookup_request.cc  lookup_request.h  lookup_response.cc  lookup_response.h  message.cc  message.h  message_error.h  message_key.cc  message_key.h  ping_request.h  ping_response.h  store_value_request.cc  store_value_request.h  store_value_response.h
src/core/task/: candidate_node.h  closest_candidates.cc  closest_candidates.h  closest_set.h  lookup_task.cc  lookup_task.h  node_lookup.cc  node_lookup.h  peer_announce.cc  peer_announce.h  peer_lookup.cc  peer_lookup.h  ping_refresh_task.cc  ping_refresh_task.h  task.cc  task.h  task_manager.cc  task_manager.h  value_announce.cc  value_announce.h  value_lookup.cc  value_lookup.h
src/core/utils/: addr.cc  addr.h  blob.cc  common.h  json_to_any.cc  json_to_any.h  list.h  loading_cache.h  log.cc  log.h  mtqueue.h  random_generator.h  socket_address.cc  time.h
tests/ad-hoc/: CMakeLists.txt  activeproxy_tests.cc  activeproxy_tests.h  main.cc  node_tests.cc  node_tests.h  routingtable_tests.cc  routingtable_tests.h
tests/apitests/: CMakeLists.txt  address_tests.cc  address_tests.h  crypto_tests.cc  crypto_tests.h  id_tests.cc  id_tests.h  log_tests.cc  log_tests.h  main.cc  node_tests.cc  node_tests.h  nodeinfo_tests.cc  nodeinfo_tests.h  peer_tests.cc  peer_tests.h  peerinfo_storage_tests.cc  peerinfo_storage_tests.h  peerinfo_tests.cc  peerinfo_tests.h  prefix_tests.cc  prefix_tests.h  value_storage_tests.cc  value_storage_tests.h  value_store_tests.cc  value_store_tests.h  value_tests.cc  value_tests.h
tests/apitests/messages/: announce_peer_tests.cc  announce_peer_tests.h  error_message_tests.cc  error_message_tests.h  find_node_tests.cc  find_node_tests.h  find_peer_tests.cc  find_peer_tests.h  find_value_tests.cc  find_value_tests.h  message_tests.h  ping_tests.cc  ping_tests.h  store_value_tests.cc  store_value_tests.h
tests/apitests/task/: closest_candidates_tests.cc
tests/boxtests/: CMakeLists.txt  boxtests.conf  main.cc  node_tests.cc  node_tests.h
tests/common/: utils.cc  utils.h
tests/functests/: CMakeLists.txt  automation.conf  main.cc  node_automation_tests.cc
tests/stresstests/: CMakeLists.txt  main.cc  node_stress_tests.cc  node_stress_tests.h
tests/sybil_attacher/: main.cc
tests/sybiltests/: CMakeLists.txt  main.cc
